--- a/WPF EDI/MainWindow.xaml
+++ b/WPF EDI/MainWindow.xaml
@@ -47,28 +47,31 @@
                         <Button x:Name="cancelBtnClmInfoTab" Content="Cancel" HorizontalAlignment="Left" Margin="10,367,0,0" VerticalAlignment="Top" Width="75" FontSize="14" Click="cancelBtnClmInfoTab_Click" ToolTip="Close the application"/>
                         <Button x:Name="nextBtnClaimInfoTab" Content="Next" HorizontalAlignment="Left" Margin="619,367,0,0" VerticalAlignment="Top" Width="75" FontSize="14" Click="nextBtnClaimInfoTab_Click" ToolTip="Click to move to the next page"/>
                         <Button x:Name="backBtnClaimInfoTab" Content="Back" HorizontalAlignment="Left" Margin="539,367,0,0" VerticalAlignment="Top" Width="75" FontSize="14" Click="backBtnClaimInfoTab_Click" ToolTip="Click to proceed back to the previous page"/>
-                        <GroupBox Header="Claim Information" HorizontalAlignment="Left" Height="280" Margin="24,24,0,24" VerticalAlignment="Center" Width="218"/>
+                        <GroupBox Header="Claim Information" HorizontalAlignment="Left" Height="302" Margin="24,60,0,37" VerticalAlignment="Center" Width="218"/>
                         <GroupBox Header="Transfer Information" HorizontalAlignment="Center" Height="169" Margin="0,0,0,0" VerticalAlignment="Center" Width="178"/>
-                        <GroupBox Header="Dates" HorizontalAlignment="Right" Height="280" Margin="0,60,24,59" VerticalAlignment="Center" Width="218"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="83,98,0,0" TextWrapping="Wrap" Text="Claim Number" VerticalAlignment="Top"/>
-                        <TextBox x:Name="ClmNoTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" SpellCheck.IsEnabled="True"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="99,148,0,0" TextWrapping="Wrap" Text="Payer ID" VerticalAlignment="Top"/>
-                        <TextBox x:Name="payerIDTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,170,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="83,198,0,0" TextWrapping="Wrap" Text="Claim Amount" VerticalAlignment="Top"/>
-                        <TextBox x:Name="clmAmtTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="72,248,0,0" TextWrapping="Wrap" Text="Payment Amount" VerticalAlignment="Top"/>
-                        <TextBox x:Name="pmtAmtTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,270,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                        <CheckBox x:Name="trnfrCheckBox" Content="Transfer?" HorizontalAlignment="Left" Margin="88,298,0,0" VerticalAlignment="Top"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="305,154,0,0" TextWrapping="Wrap" Text="Crossover ID" VerticalAlignment="Top" RenderTransformOrigin="0.705,0.402"/>
-                        <TextBox x:Name="crossoverIDTxtBox" HorizontalAlignment="Left" Height="23" Margin="293,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="296,207,0,0" TextWrapping="Wrap" Text="Transfer Amount" VerticalAlignment="Top"/>
-                        <TextBox x:Name="trsfrAmtTxtBox" HorizontalAlignment="Left" Height="23" Margin="293,229,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="534,127,0,0" TextWrapping="Wrap" Text="Claim Date" VerticalAlignment="Top"/>
-                        <TextBox x:Name="clmDateTxtBox" HorizontalAlignment="Left" Height="23" Margin="515,149,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="534,177,0,0" TextWrapping="Wrap" Text="Post Date" VerticalAlignment="Top" Width="77" TextAlignment="Center"/>
-                        <TextBox x:Name="postDtTxtBox" HorizontalAlignment="Left" Height="23" Margin="515,199,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-                        <TextBlock HorizontalAlignment="Left" Margin="526,230,0,0" TextWrapping="Wrap" Text="Payment Date" VerticalAlignment="Top"/>
-                        <TextBox x:Name="pmtDtTxtBox" HorizontalAlignment="Left" Height="23" Margin="515,252,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="1.21,-1.34"/>
+                        <GroupBox Header="Dates" HorizontalAlignment="Right" Height="302" Margin="0,60,24,37" VerticalAlignment="Center" Width="218"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="83,145,0,0" TextWrapping="Wrap" Text="Claim Number" VerticalAlignment="Top" RenderTransformOrigin="0.515,0.138"/>
+                        <TextBox x:Name="ClmNoTxtBox" HorizontalAlignment="Left" Height="23" Margin="73,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" SpellCheck.IsEnabled="True"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="99,195,0,0" TextWrapping="Wrap" Text="Payer ID" VerticalAlignment="Top"/>
+                        <TextBox x:Name="payerIDTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="83,245,0,0" TextWrapping="Wrap" Text="Claim Amount" VerticalAlignment="Top"/>
+                        <TextBox x:Name="clmAmtTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,267,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="72,295,0,0" TextWrapping="Wrap" Text="Payment Amount" VerticalAlignment="Top"/>
+                        <TextBox x:Name="pmtAmtTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,317,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <CheckBox x:Name="trnfrCheckBox" Content="Transfer?" HorizontalAlignment="Left" Margin="305,148,0,0" VerticalAlignment="Top" Width="91"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="305,170,0,0" TextWrapping="Wrap" Text="Crossover ID" VerticalAlignment="Top" RenderTransformOrigin="0.705,0.402"/>
+                        <TextBox x:Name="crossoverIDTxtBox" HorizontalAlignment="Left" Height="23" Margin="293,192,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="296,223,0,0" TextWrapping="Wrap" Text="Transfer Amount" VerticalAlignment="Top"/>
+                        <TextBox x:Name="trsfrAmtTxtBox" HorizontalAlignment="Left" Height="23" Margin="293,245,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="533,136,0,0" TextWrapping="Wrap" Text="Claim Date" VerticalAlignment="Top"/>
+                        <TextBox x:Name="clmDateTxtBox" HorizontalAlignment="Left" Height="23" Margin="514,158,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="533,186,0,0" TextWrapping="Wrap" Text="Post Date" VerticalAlignment="Top" Width="77" TextAlignment="Center"/>
+                        <TextBox x:Name="postDtTxtBox" HorizontalAlignment="Left" Height="23" Margin="514,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="525,239,0,0" TextWrapping="Wrap" Text="Payment Date" VerticalAlignment="Top"/>
+                        <TextBox x:Name="pmtDtTxtBox" HorizontalAlignment="Left" Height="23" Margin="514,261,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="1.21,-1.34"/>
+                        <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Enter the information below that is relevant to the patient claim." VerticalAlignment="Top"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="64,95,0,0" TextWrapping="Wrap" Text="Reference Number" VerticalAlignment="Top" Width="138" TextAlignment="Center"/>
+                        <TextBox x:Name="refNoTxtBox" HorizontalAlignment="Left" Height="23" Margin="72,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="serviceLineInfo" Header="Service Lines" Height="Auto">
@@ -76,6 +79,31 @@
                         <Button x:Name="cancelBtnSrvLineTab" Content="Cancel" HorizontalAlignment="Left" Margin="10,367,0,0" VerticalAlignment="Top" Width="75" FontSize="14" Click="cancelBtnSrvLineTab_Click"/>
                         <Button x:Name="nextBtnSrvLineTab" Content="Next" HorizontalAlignment="Left" Margin="619,367,0,0" VerticalAlignment="Top" Width="75" FontSize="14" Click="nextBtnSrvLineTab_Click"/>
                         <Button x:Name="backBtnSrvLineTab" Content="Back" HorizontalAlignment="Left" Margin="539,367,0,0" VerticalAlignment="Top" Width="75" FontSize="14" Click="backBtnSrvLineTab_Click"/>
+                        <Button x:Name="addSrvLineButton" Content="Add" HorizontalAlignment="Left" Margin="90,367,0,0" VerticalAlignment="Top" Width="75"/>
+                        <ScrollViewer HorizontalAlignment="Left" Height="166" Margin="10,196,0,0" VerticalAlignment="Top" Width="684">
+                            <Grid Height="166" Width="660" Background="#FFFFFF"/>
+                        </ScrollViewer>
+                        <GroupBox Header="Service Info" HorizontalAlignment="Left" Height="181" Margin="10,10,0,0" VerticalAlignment="Top" Width="200"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="45,32,0,0" TextWrapping="Wrap" Text="Date of Service" VerticalAlignment="Top" Width="120" TextAlignment="Center"/>
+                        <TextBox x:Name="dateOfServiceTxtBox" HorizontalAlignment="Left" Height="23" Margin="45,54,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="45,82,0,0" TextWrapping="Wrap" Text="Service Code" VerticalAlignment="Top" Width="120" TextAlignment="Center"/>
+                        <TextBox x:Name="srvCodeTxtBox" HorizontalAlignment="Left" Height="23" Margin="45,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="-2.608,0.493"/>
+                        <GroupBox Header="Amounts" HorizontalAlignment="Right" Height="181" Margin="0,10,10,0" VerticalAlignment="Top" Width="200"/>
+                        <TextBlock HorizontalAlignment="Left" Margin="45,132,0,0" TextWrapping="Wrap" Text="Revenue Code" VerticalAlignment="Top" Width="120" TextAlignment="Center"/>
+                        <TextBox x:Name="revCodeTxtBox" HorizontalAlignment="Left" Height="23" Margin="45,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Right" Margin="0,35,30,0" TextWrapping="Wrap" Text="Payment Amount" VerticalAlignment="Top" Width="150" TextAlignment="Center"/>
+                        <TextBox x:Name="pmtAmtTxtBox1" HorizontalAlignment="Right" Height="23" Margin="0,57,45,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Right" Margin="0,85,30,0" TextWrapping="Wrap" Text="Adjustment Amount" VerticalAlignment="Top" TextAlignment="Center" Width="150"/>
+                        <TextBox x:Name="adjAmtTxtBox" HorizontalAlignment="Right" Height="23" Margin="0,107,45,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Right" Margin="0,132,30,0" TextWrapping="Wrap" Text="Transfer Amount" VerticalAlignment="Top" Width="150" TextAlignment="Center"/>
+                        <TextBox x:Name="trsfrAmtTxtBox1" HorizontalAlignment="Right" Height="23" Margin="0,154,45,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <GroupBox Header="Reason Codes" HorizontalAlignment="Center" Height="181" Margin="0,10,0,0" VerticalAlignment="Top" Width="200"/>
+                        <TextBlock HorizontalAlignment="Center" Margin="0,32,0,0" TextWrapping="Wrap" Text="Payment Code" VerticalAlignment="Top" Width="144" TextAlignment="Center"/>
+                        <TextBox x:Name="pmtCodeTxtBox" HorizontalAlignment="Center" Height="23" Margin="0,54,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Center" Margin="0,82,0,0" TextWrapping="Wrap" Text="Adjustment Code" VerticalAlignment="Top" Width="144" TextAlignment="Center"/>
+                        <TextBox x:Name="adjCodeTxtBox" HorizontalAlignment="Center" Height="23" Margin="0,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                        <TextBlock HorizontalAlignment="Center" Margin="0,132,0,0" TextWrapping="Wrap" Text="Transfer Code" VerticalAlignment="Top" Width="150" TextAlignment="Center"/>
+                        <TextBox x:Name="trsfrCodeTxtBox" HorizontalAlignment="Center" Height="23" Margin="0,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="addtlInfoTab" Header="Addt'l Info" Height="Auto">
