--- a/WPF EDI/App.xaml
+++ b/WPF EDI/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF_EDI" xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Forms/MainWindow.xaml">
     <Application.Resources>
     </Application.Resources>
 </Application>
