--- a/WPF EDI/Forms/MainWindow.xaml
+++ b/WPF EDI/Forms/MainWindow.xaml
@@ -373,7 +373,7 @@
         <DockPanel HorizontalAlignment="Left" Height="Auto" LastChildFill="False" Margin="0,0,0,0" VerticalAlignment="Top" Width="Auto">
             <Menu DockPanel.Dock="Top" HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Left" FontFamily="Verdana" FontSize="10" Width="Auto">
                 <MenuItem x:Name="optionsMenu" Header="File" HorizontalAlignment="Left" FontFamily="Verdana" FontSize="14" Width="Auto" Height="Auto" StaysOpenOnClick="True" MouseEnter="optionsMenu_MouseEnter" MouseLeave="optionsMenu_MouseLeave">
-                    <MenuItem x:Name="preferencesMenuItem"  Header="Preferences" />
+                    <MenuItem x:Name="preferencesMenuItem"  Header="Preferences" Click="preferencesMenuItem_Click" />
                     <MenuItem x:Name="exitMenuItem" Header="Exit" Click="exitMenuItem_Click" />
                 </MenuItem>
             </Menu>
